--- a/example/open-telemetry/README.adoc
+++ b/example/open-telemetry/README.adoc
@@ -6,36 +6,42 @@
 
 == Description
 
-This is a showcase on how to add OpenTelemetry observability solution into Almaraz without changing code.
+This is a showcase on how to get full observability into Almaraz by using OpenTelemetry solution for tracing and Spring-Boot Actuator exposing a Prometheus interface for metrics.
 
 
 == ShowCase Architecture
 
 The architecture would be as simple as possible for learning porposes. Almaraz example will use
-auto-intrumentation (Java Agent) to automatically recollect telemetry data to be sent to
-OpenTelemetry Collector using default OTLP protocol. All tracing data will be exported to a Jaeger
-Backend but metric data would be exposed as a 'pull-based' exporter 'a la Prometheus'.
+link:https://github.com/open-telemetry/opentelemetry-java/[auto-intrumentation] (via Java Agent) to automatically recollect tracing data to be sent to the OpenTelemetry Collector using default OTLP protocol.
+For metrics, the link:https://docs.spring.io/spring-boot/docs/current/reference/html/production-ready-features.html[Spirng Boot Actuator] is used to generate several metrics on each exposed endpoint.
+All tracing data will be exported to a Jaeger Backend but metric data would be exposed as a 'pull-based' exporter 'a la Prometheus'.
 In addition the collector instance itself is another observable application and it will be reporting telemetry
 information too.
 
-Follows detailed information for each architecture's component: 
-
+Following the link:https://opentelemetry.io/docs/[OpenTelemetry logic architecture], we are going to split observability data into three independent flows, all of them recollected by the OTEL Collector who will export them to the selected backends. As local infrastructure solution, docker-compose is used and its design is link:./docker-compose.yaml[here].
 
 === Tracing Backend
 
-As a tracing backend, Jaeger is selected.
+As tracing backend, we offer:
 
-```
-docker run --rm -p 16686:16686 -p 14250:14250 -p 14268:14268 --name jaeger-all jaegertracing/all-in-one:latest
-```
+. Jaeger: using Elasticsearch as storage backend.
+
+  `docker-compose up -d elasticsearch jaeger-collector jaeger-agent jaeger-query`
+
+. Tempo:
+
+  `docker-compose up -d tempo`
 
 === Metrics Backend
 
-Prometheus is going to be the metrics backend. configuration could be read link:./configs/prometheus.yaml[here].
+Prometheus is going to be the metrics backend, and the used configuration could be read link:./configs/prometheus.yaml[here].
 
-``` 
-docker run --rm --network host --name prometheus -v ${REPO_PATH}/open-telemetry/configs/prometheus.yaml:/etc/prometheus/prometheus.yml  prom/prometheus:latest
-``` 
+
+
+=== Logging Backend
+
+Currently, it is not used in this showcase.
+
 
 === Open-Telemetry Collector
 
@@ -47,22 +53,22 @@ configuration could be read link:./configs/otel-local-config.yaml[here].
  docker run --rm --network host -v "${REPO_PATH}/open-telemetry/configs/otel-local-config.yaml":/otel-local-config.yaml --name otelcol otel/opentelemetry-collector --config otel-local-config.yaml;
 ```
 
-=== Play Almaraz application
+=== Almaraz Application Example
 
-We are going to use link:../example[Almaraz Example] as an application for the showcase.
+We are going to use link:../example[Almaraz Example] as an application for the Telemetry showcase.
 
-First it is required to use the link:Open-Telemetry Java
-Agent[https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent-all.jar].
+First it is required to use the link:Open-Telemetry Java Agent[https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent-all.jar].
 
 Lets go start it using:
 
 ```
-cd example
-mvn package
-java -javaagent:<path-to>/opentelemetry-javaagent-all.jar -Dotel.resource.attributes=service.name=almaraz-example -jar ./target/almaraz-example-0.2.7.jar
+cd ..
+mvn build:image
+cd open-telemetry
+docker-compose up almaraz-example-app
 ```
 
-==== Examples
+For testing, use the requests proposed link:../README.md[here]. For example:
 
 ```
 curl -v -X POST -H 'Content-Type: application/json' -d '{"name": "jorge", "country": "es"}' http://localhost:8080/api/users
